2005-02-03  Kjartan Maraas  <kmaraas@gnome.org>

	* engines/smooth/src/engine/smooth_gtk2_engine.c:
	(smooth_rc_style_parse): Use g_quark_from_string() instead
	of g_quark_from_static_string() since the latter will cause
	problems when used in modules that are dynamically loaded
	and unloaded. This should solve a ton of crashes related
	to changing themes. Closes bug #165942, bug #166018,
	bug #160803, and is also related to other theme related
	crashes all the way back to 1.4.x. Theme engine authors
	should be made aware of this so we can get external theme
	engines fixed.

2005-01-29  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated
	* configure.ac: Change version to 2.6.1

2005-01-28  Thomas Wood  <thos@gnome.org>

	* engines/smooth/Makefile.am: Fix bug 162131 (Enable building outside of srcdir)

2005-01-06  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-pixmaps.c: (load_image):
	* engines/crux/src/crux-rc-style.c: (crux_rc_style_init):
	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_handle):

	Applied patch from bug 163099 (fixes building with C89 compilers)

2005-01-04  Andrew Johnson <ajgenius@ajgenius.us>

	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(reverse_engineer_spin_button):
	
	improve spin button up arrow offset when embedded
	
	* engines/smooth/src/interfaces/gdk2/gdk2_drawing_interface.c:
	(internal_image_buffer_new), (GDK2CanvasStore), (GDK2CanvasRender),
	(GDK2CanvasDrawLine), (GDK2CanvasDrawLines), (GDK2CanvasDrawArc),
	(GDK2CanvasFrameRectangle), (GDK2CanvasFrameChord),
	(GDK2CanvasFillRectangle), (GDK2CanvasFillChord),
	(GDKInitializeCanvas), (GDKFinalizeCanvas),
	(_DrawingInterfaceInitialize), (_DrawingInterfaceFinalize):
        * engines/smooth/src/interfaces/gdk2/gdk2_private_drawing_interface.h:

	Remove unused experimental Cairo/Xrender, Bezier, & Blur Cruft
	
        * engines/smooth/src/interfaces/gdk2/gdk2_drawing_interface.c:
        (GDK2CanvasFrameRectangle):